--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA}
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
-jwt.secret=${JWT_SECRET}
 
+spring.datasource.url= jdbc:postgresql://localhost:5433/testdb
+spring.datasource.username= postgres
+spring.datasource.password= 123
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references: true
+
+jwt.secret=watchitjwtsecret
